Added experince section

--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -3,6 +3,7 @@ import { Button } from "@/components/ui/button";
 import DownloadIcon from "./icons/DownloadIcon.astro";
 import GithubIcon from "./icons/GithubIcon.astro";
 import LinkedinIcon from "./icons/LinkedinIcon.astro";
+import Separator from "./Separator.astro";
 ---
 
 <div
@@ -44,5 +45,5 @@ import LinkedinIcon from "./icons/LinkedinIcon.astro";
     <GithubIcon />
     <LinkedinIcon />
   </div>
-  <div class="w-full border-t border-gray-200"></div>
+  <Separator />
 </div>
