--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,10 +1,11 @@
 ---
 import About from "@/components/About.astro"
-import { Button } from "@/components/ui/button"
+import Experience from "@/components/Experience.astro"
 import MainLayout from "@/layouts/MainLayout.astro"
 ---
 
 <MainLayout title="Angel Almanza">
 	<About />
+	<Experience />
 </MainLayout>
 
