--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,6 @@
 ---
 import About from "@/components/About.astro"
+import Education from "@/components/Education.astro"
 import Experience from "@/components/Experience.astro"
 import MainLayout from "@/layouts/MainLayout.astro"
 ---
@@ -7,5 +8,6 @@ import MainLayout from "@/layouts/MainLayout.astro"
 <MainLayout title="Angel Almanza">
 	<About />
 	<Experience />
+	<Education />
 </MainLayout>
 
