--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,6 +2,7 @@
 import About from "@/components/About.astro"
 import Education from "@/components/Education.astro"
 import Experience from "@/components/Experience.astro"
+import Skills from "@/components/Skills.astro"
 import MainLayout from "@/layouts/MainLayout.astro"
 ---
 
@@ -9,5 +10,6 @@ import MainLayout from "@/layouts/MainLayout.astro"
 	<About />
 	<Experience />
 	<Education />
+	<Skills />
 </MainLayout>
 
