--- a/src/components/Skills.astro
+++ b/src/components/Skills.astro
@@ -28,7 +28,7 @@ const skills = [
     <CodeIcon />
     <h2 class="text-3xl font-bold text-black pb-1">Skills y Tecnologías</h2>
   </div>
-  <div class="grid grid-cols-1 gap-4 md:grid-cols-2">
+  <div class="grid grid-cols-1 gap-4 md:grid-cols-2 mb-8">
     {
       skills.map((skill) => (
         <article class="border p-8 rounded-lg shadow space-y-8">
