--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,6 +3,7 @@ import About from "@/components/About.astro"
 import Education from "@/components/Education.astro"
 import Experience from "@/components/Experience.astro"
 import Skills from "@/components/Skills.astro"
+import Footer from "@/components/Footer.astro"
 import MainLayout from "@/layouts/MainLayout.astro"
 ---
 
@@ -11,5 +12,6 @@ import MainLayout from "@/layouts/MainLayout.astro"
 	<Experience />
 	<Education />
 	<Skills />
+	<Footer />
 </MainLayout>
 
