--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,6 +5,7 @@ import Experience from "@/components/Experience.astro"
 import Skills from "@/components/Skills.astro"
 import Footer from "@/components/Footer.astro"
 import MainLayout from "@/layouts/MainLayout.astro"
+import Projects from "@/components/Projects.astro"
 ---
 
 <MainLayout title="Angel Almanza">
@@ -12,6 +13,7 @@ import MainLayout from "@/layouts/MainLayout.astro"
 	<Experience />
 	<Education />
 	<Skills />
+	<Projects />
 	<Footer />
 </MainLayout>
 
