--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,6 +6,7 @@ import Skills from "@/components/Skills.astro"
 import Footer from "@/components/Footer.astro"
 import MainLayout from "@/layouts/MainLayout.astro"
 import Projects from "@/components/Projects.astro"
+import Contact from "@/components/Contact.astro"
 ---
 
 <MainLayout title="Angel Almanza">
@@ -14,6 +15,7 @@ import Projects from "@/components/Projects.astro"
 	<Education />
 	<Skills />
 	<Projects />
+	<Contact />
 	<Footer />
 </MainLayout>
 
